add confirmation on remove expense

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -10,6 +10,10 @@
   text-decoration: none;
 }
 
+.button--danger {
+  background: tomato;
+}
+
 .button--link {
   background: none;
   outline: none;
