--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -16,3 +16,11 @@
     font-weight: 700;
   }
 }
+
+.page-header__subtitle {
+  font-style: italic;
+  font-weight: 300;
+  margin: 0 0 $s-size;
+  padding: 0;
+
+}
